--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/img"
+    android:orientation="vertical"
 
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -15,24 +15,24 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:textSize="36sp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:textStyle="bold"
-        android:text="@string/str_txt" />
+        android:text="@string/str_txt"
+        android:textColor="@android:color/white"
+        android:textSize="36sp"
+        android:textStyle="bold" />
 
     <Button
         android:layout_width="wrap_content"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:background="@drawable/bck_btn"
-        android:gravity="center"
-        android:textSize="20sp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
-        android:text="@string/str_btn" />
+        android:background="@drawable/bck_btn"
+        android:gravity="center"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:text="@string/str_btn"
+        android:textColor="@android:color/white"
+        android:textSize="20sp" />
 </LinearLayout>
