se agrega soporte landscape

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/margin_top_txt"
+        android:layout_marginTop="5dp"
         android:gravity="center"
         android:text="@string/str_txt"
         android:textColor="@android:color/white"
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/margin_top_btn"
+        android:layout_marginTop="5dp"
         android:background="@drawable/bck_btn"
         android:gravity="center"
         android:paddingLeft="@dimen/paddin_horizontal_btn"
