--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="text_size_txt">36sp</dimen>
+    <dimen name="text_size_btn">20sp</dimen>
+    <dimen name="paddin_horizontal_btn">30dp</dimen>
+    <dimen name="margin_top_btn">40dp</dimen>
+    <dimen name="margin_top_txt">20dp</dimen>
 </resources>
